argocd/immich/immich-redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: immich
spec:
  selector:
    app: redis
  ports:
    - name: http
      port: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      restartPolicy: Always
      containers:
        - name: redis
          image: redis:8.10.2-alpine
          resources:
            limits:
              memory: "256Mi"
              cpu: "250m"
          volumeMounts:
            - mountPath: /data
              name: redis-volume
          ports:
            - containerPort: 6379
      volumes:
        - name: redis-volume
          persistentVolumeClaim:
            claimName: immich-redis-data
