argocd/immich/immich-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: immich
  name: immich-server
spec:
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:v3.3.1
          resources:
            limits:
              memory: "2Gi"
          ports:
            - containerPort: 2283
          volumeMounts:
            - mountPath: /usr/src/app/upload
              name: immich-data
      volumes:
        - name: immich-data
          persistentVolumeClaim:
            claimName: immich-data
---
apiVersion: v1
kind: Service
metadata:
  namespace: immich
  name: frontend
spec:
  selector:
    app: immich-server
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2283
